samples/_failures_safe/1761420967_ac72b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e68be712.c: In function ‘main’:
./samples/SAFE/__tmp_e68be712.c:135:12: error: missing terminating " character
  135 |     printf("Decomp
      |            ^~~~~~~
./samples/SAFE/__tmp_e68be712.c:135:5: error: expected expression at end of input
  135 |     printf("Decomp
      |     ^~~~~~
./samples/SAFE/__tmp_e68be712.c:135:5: error: expected declaration or statement at end of input
